add readme doctest and travis config

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,8 @@ setenv =
     PYTHONHASHSEED = 42
 commands =
     python setup.py build_ext --inplace
-    nosetests -v --stop
+    nosetests -v
+    py34: python -m doctest -o NORMALIZE_WHITESPACE README.rst
 deps =
     nose
     setuptools
