--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ python:
   - 3.5
 
 install:
-  - pip install -Uv pip setuptools setuptools_scm nose -rrequirements.txt --use-mirrors
+  - pip install -U pip setuptools setuptools_scm wheel
+  - pip install -U nose -rrequirements.txt
   - python setup.py build_ext --inplace
 
 script:
