--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ setenv =
 commands =
     python setup.py build_ext --inplace
     nosetests -v
-    py34: python -m doctest -o NORMALIZE_WHITESPACE README.rst
+    py34: python -m doctest -o NORMALIZE_WHITESPACE README.rst PERSISTENCE.rst
 deps =
     nose
     setuptools
