fix test runners

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ setenv =
     PYTHONHASHSEED = 42
 commands =
     python setup.py build_ext --inplace
-    nosetests -v
+    nosetests -v zarr
     py34: python -m doctest -o NORMALIZE_WHITESPACE README.rst PERSISTENCE.rst
 deps =
     nose
