--- a/tox.ini
+++ b/tox.ini
@@ -11,8 +11,8 @@ setenv =
     PYTHONHASHSEED = 42
 commands =
     python setup.py build_ext --inplace
-    nosetests -v zarr
-    py34: python -m doctest -o NORMALIZE_WHITESPACE README.rst PERSISTENCE.rst
+    nosetests -v --with-doctest --doctest-options=+NORMALIZE_WHITESPACE zarr
+    py34,py35: python -m doctest -o NORMALIZE_WHITESPACE README.rst PERSISTENCE.rst
 deps =
     nose
     setuptools
