clean up legacy; make tests work

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ setenv =
 commands =
     python setup.py build_ext --inplace
     nosetests -v --with-doctest --doctest-options=+NORMALIZE_WHITESPACE zarr
-    py34,py35: python -m doctest -o NORMALIZE_WHITESPACE README.rst PERSISTENCE.rst
+    py34,py35: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS README.rst PERSISTENCE.rst
 deps =
     nose
     setuptools
