--- a/tox.ini
+++ b/tox.ini
@@ -11,10 +11,11 @@ setenv =
     PYTHONHASHSEED = 42
 commands =
     python setup.py build_ext --inplace
-    nosetests -v --with-doctest --doctest-options=+NORMALIZE_WHITESPACE zarr
+    nosetests -v --with-coverage --cover-package zarr --with-doctest --doctest-options=+NORMALIZE_WHITESPACE zarr
     py34,py35: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS README.rst PERSISTENCE.rst
 deps =
     nose
+    coverage
     setuptools
     setuptools_scm
     -rrequirements.txt
