--- a/tox.ini
+++ b/tox.ini
@@ -13,9 +13,11 @@ commands =
     python setup.py build_ext --inplace
     nosetests -v --with-coverage --cover-package zarr --with-doctest --doctest-options=+NORMALIZE_WHITESPACE zarr
     py34,py35: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS README.rst PERSISTENCE.rst
+    py35: flake8 zarr
 deps =
     nose
     coverage
     setuptools
     setuptools_scm
+    flake8
     -rrequirements.txt
