--- a/tox.ini
+++ b/tox.ini
@@ -11,8 +11,9 @@ setenv =
     PYTHONHASHSEED = 42
 commands =
     python setup.py build_ext --inplace
-    nosetests -v --with-coverage --cover-package zarr --with-doctest --doctest-options=+NORMALIZE_WHITESPACE zarr
-    py35: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS README.rst PERSISTENCE.rst
+    py27: nosetests -v zarr
+    py34,py35: nosetests -v --with-coverage --cover-package zarr --with-doctest --doctest-options=+NORMALIZE_WHITESPACE zarr
+    py34,py35: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS README.rst PERSISTENCE.rst
     py35: flake8 zarr
 deps =
     nose
