--- a/tox.ini
+++ b/tox.ini
@@ -16,11 +16,5 @@ commands =
     py34,py35: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS README.rst PERSISTENCE.rst
     py35: flake8 zarr
 deps =
-    nose
-    coverage
-    setuptools
-    setuptools_scm
-    flake8
-    heapdict
-    zict
+    -rrequirements_test.txt
     -rrequirements.txt
