fix test coverage; surface zarr.create

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ setenv =
 commands =
     python setup.py build_ext --inplace
     py27: nosetests -v zarr
-    py34,py35: nosetests -v --with-coverage --cover-package zarr --with-doctest --doctest-options=+NORMALIZE_WHITESPACE zarr
+    py34,py35: nosetests -v --with-coverage --cover-erase --cover-package zarr --with-doctest --doctest-options=+NORMALIZE_WHITESPACE zarr
     py34,py35: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS README.rst PERSISTENCE.rst
     py35: flake8 zarr
 deps =
