--- a/tox.ini
+++ b/tox.ini
@@ -18,3 +18,13 @@ commands =
 deps =
     -rrequirements_test.txt
     -rrequirements.txt
+
+[testenv:docs]
+basepython = python2.7
+changedir = docs
+deps =
+    sphinx
+    numpydoc
+    mock
+commands =
+    sphinx-build -W -b html -d {envtmpdir}/doctrees .  {envtmpdir}/html
