add docs to tox; fox socks box knox.

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, py34, py35
+envlist = py27, py34, py35, docs
 
 [testenv]
 setenv =
@@ -26,5 +26,7 @@ deps =
     sphinx
     numpydoc
     mock
+    numpy
+    cython
 commands =
     sphinx-build -W -b html -d {envtmpdir}/doctrees .  {envtmpdir}/html
