--- a/tox.ini
+++ b/tox.ini
@@ -20,13 +20,9 @@ deps =
     -rrequirements.txt
 
 [testenv:docs]
-basepython = python2.7
+basepython = python3.5
 changedir = docs
 deps =
-    sphinx
-    numpydoc
-    mock
-    numpy
-    cython
+    -rrequirements_rtfd.txt
 commands =
     sphinx-build -W -b html -d {envtmpdir}/doctrees .  {envtmpdir}/html
