--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ commands =
     python setup.py build_ext --inplace
     py27: nosetests -v zarr
     py34,py35: nosetests -v --with-coverage --cover-erase --cover-min-percentage=100 --cover-package=zarr --with-doctest --doctest-options=+NORMALIZE_WHITESPACE zarr
-    py34,py35: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS README.rst PERSISTENCE.rst
+    py34,py35: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS docs/tutorial.rst
     py35: flake8 zarr
 deps =
     -rrequirements_test.txt
