--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,6 @@
 recursive-include c-blosc *
+recursive-include zarr *.pxd
 recursive-include zarr *.pyx
+recursive-include zarr *.h
+recursive-include zarr *.c
 include cpuinfo.py
