--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,20 +12,20 @@ environment:
     - PYTHON: "C:\\Python34"
     - PYTHON: "C:\\Python35"
     - PYTHON: "C:\\Python27-x64"
-      DISTUTILS_USE_SDK: "1"
     - PYTHON: "C:\\Python34-x64"
-      DISTUTILS_USE_SDK: "1"
     - PYTHON: "C:\\Python35-x64"
 
 install:
-  - "%PYTHON%\\python.exe -m pip install wheel"
-  - "%PYTHON%\\python.exe -m pip install -rrequirements_test.txt"
-  - "%PYTHON%\\python.exe -m pip install -rrequirements.txt"
+  - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
   - git submodule update --init --recursive
 
 build: off
 
 test_script:
+  - "%CMD_IN_ENV% python -m pip install -U pip"
+  - "%CMD_IN_ENV% python -m pip install -U setuptools wheel"
+  - "%CMD_IN_ENV% python -m pip install -rrequirements_test.txt"
+  - "%CMD_IN_ENV% python -m pip install -rrequirements.txt"
   - "%CMD_IN_ENV% python setup.py build_ext --inplace"
   - "%CMD_IN_ENV% python -m nose -v"
 
