--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,11 +9,28 @@ environment:
   matrix:
 
     - PYTHON: "C:\\Python27"
-    - PYTHON: "C:\\Python34"
-    - PYTHON: "C:\\Python35"
+      PYTHON_VERSION: "2.7"
+      PYTHON_ARCH: "32"
+
     - PYTHON: "C:\\Python27-x64"
-    - PYTHON: "C:\\Python34-x64"
-    - PYTHON: "C:\\Python35-x64"
+      PYTHON_VERSION: "2.7"
+      PYTHON_ARCH: "64"
+
+#    - PYTHON: "C:\\Python34"
+#      PYTHON_VERSION: "3.4"
+#      PYTHON_ARCH: "32"
+#
+#    - PYTHON: "C:\\Python34-x64"
+#      PYTHON_VERSION: "3.4"
+#      PYTHON_ARCH: "64"
+#
+#    - PYTHON: "C:\\Python35"
+#      PYTHON_VERSION: "3.5"
+#      PYTHON_ARCH: "32"
+#
+#    - PYTHON: "C:\\Python35-x64"
+#      PYTHON_VERSION: "3.5"
+#      PYTHON_ARCH: "64"
 
 install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
