--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,21 +16,21 @@ environment:
       PYTHON_VERSION: "2.7"
       PYTHON_ARCH: "64"
 
-#    - PYTHON: "C:\\Python34"
-#      PYTHON_VERSION: "3.4"
-#      PYTHON_ARCH: "32"
-#
-#    - PYTHON: "C:\\Python34-x64"
-#      PYTHON_VERSION: "3.4"
-#      PYTHON_ARCH: "64"
-#
-#    - PYTHON: "C:\\Python35"
-#      PYTHON_VERSION: "3.5"
-#      PYTHON_ARCH: "32"
-#
-#    - PYTHON: "C:\\Python35-x64"
-#      PYTHON_VERSION: "3.5"
-#      PYTHON_ARCH: "64"
+    - PYTHON: "C:\\Python34"
+      PYTHON_VERSION: "3.4"
+      PYTHON_ARCH: "32"
+
+    - PYTHON: "C:\\Python34-x64"
+      PYTHON_VERSION: "3.4"
+      PYTHON_ARCH: "64"
+
+    - PYTHON: "C:\\Python35"
+      PYTHON_VERSION: "3.5"
+      PYTHON_ARCH: "32"
+
+    - PYTHON: "C:\\Python35-x64"
+      PYTHON_VERSION: "3.5"
+      PYTHON_ARCH: "64"
 
 install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
