appveyor fixes for py35

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,27 +10,23 @@ environment:
 
     - PYTHON: "C:\\Python27"
       PYTHON_VERSION: "2.7"
-      PYTHON_ARCH: "32"
 
     - PYTHON: "C:\\Python27-x64"
       PYTHON_VERSION: "2.7"
-      PYTHON_ARCH: "64"
+      DISTUTILS_USE_SDK: "1"
 
     - PYTHON: "C:\\Python34"
       PYTHON_VERSION: "3.4"
-      PYTHON_ARCH: "32"
 
     - PYTHON: "C:\\Python34-x64"
       PYTHON_VERSION: "3.4"
-      PYTHON_ARCH: "64"
+      DISTUTILS_USE_SDK: "1"
 
     - PYTHON: "C:\\Python35"
       PYTHON_VERSION: "3.5"
-      PYTHON_ARCH: "32"
 
     - PYTHON: "C:\\Python35-x64"
       PYTHON_VERSION: "3.5"
-      PYTHON_ARCH: "64"
 
 install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
