--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,7 @@ commands =
     py34,py35: nosetests -v --with-coverage --cover-erase --cover-min-percentage=100 --cover-package=zarr --with-doctest --doctest-options=+NORMALIZE_WHITESPACE zarr
     py34,py35: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS docs/tutorial.rst docs/spec/v1.rst
     py35: flake8 zarr
+    python setup.py bdist_wheel
 deps =
     -rrequirements_test.txt
     -rrequirements.txt
