--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ setenv =
 commands =
     python setup.py build_ext --inplace
     py27: nosetests -v zarr
-    py34,py35: nosetests -v --with-coverage --cover-erase --cover-min-percentage=100 --cover-package=zarr --with-doctest --doctest-options=+NORMALIZE_WHITESPACE zarr
+    py34,py35: nosetests -v --ignore-files=meta_v1.py --with-coverage --cover-erase --cover-min-percentage=100 --cover-package=zarr --with-doctest --doctest-options=+NORMALIZE_WHITESPACE zarr
     py34,py35: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS docs/tutorial.rst docs/spec/v2.rst
     py35: flake8 zarr
     python setup.py bdist_wheel
