--- a/tox.ini
+++ b/tox.ini
@@ -4,21 +4,20 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, py34, py35, docs
+envlist = py27, py34, py35, py36, docs
 
 [testenv]
 setenv =
     PYTHONHASHSEED = 42
 commands =
     python setup.py build_ext --inplace
-    py27: nosetests -v zarr
-    py34,py35: nosetests -v --with-coverage --cover-erase --cover-min-percentage=100 --cover-package=zarr --with-doctest --doctest-options=+NORMALIZE_WHITESPACE zarr
-    py34,py35: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS docs/tutorial.rst docs/spec/v2.rst
-    py35: flake8 zarr
+    py27,py34,py35: nosetests -v zarr
+    py36: nosetests -v --with-coverage --cover-erase --cover-min-percentage=100 --cover-package=zarr --with-doctest --doctest-options=+NORMALIZE_WHITESPACE zarr
+    py36: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS docs/tutorial.rst docs/spec/v2.rst
+    py36: flake8 zarr
     python setup.py bdist_wheel
 deps =
-    -rrequirements_test.txt
-    -rrequirements.txt
+    -rrequirements_dev.txt
 
 [testenv:docs]
 basepython = python2.7
