--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
   - 3.6
 
 install:
-  - pip install -U tox-travis pip
+  - pip install -U tox-travis pip setuptools wheel
   - pip install -r requirements_dev.txt
   - python setup.py build_ext --inplace
 
