--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,7 +41,7 @@ install:
 build: off
 
 test_script:
-  - "%CMD_IN_ENV% python -m pip install -U pip"
+  - "%CMD_IN_ENV% python -m pip install -U pip setuptools wheel"
   - "%CMD_IN_ENV% python -m pip install -rrequirements_dev.txt"
   - "%CMD_IN_ENV% python setup.py build_ext --inplace"
   - "%CMD_IN_ENV% python -m nose -v"
