Print coverage report with line numbers.

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ commands =
     py36: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS docs/tutorial.rst docs/spec/v2.rst
     py36: flake8 zarr
     python setup.py bdist_wheel
+    coverage report -m
 deps =
     -rrequirements_dev.txt
 
