--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,6 @@ branches:
 
 sudo: false
 
-addons:
-  apt:
-    packages:
-      - liblzma-dev
-
 python:
   - 2.7
   - 3.4
@@ -18,9 +13,8 @@ python:
   - 3.6
 
 install:
-  - pip install -U tox-travis coveralls pip setuptools wheel
-  - pip install -r requirements_dev.txt
-  - python setup.py build_ext --inplace
+  - pip install -U pip setuptools wheel
+  - pip install -U tox-travis coveralls
 
 script:
   - tox
