--- a/tox.ini
+++ b/tox.ini
@@ -10,13 +10,11 @@ envlist = py27, py34, py35, py36, docs
 setenv =
     PYTHONHASHSEED = 42
 commands =
-    python setup.py build_ext --inplace
-    py27,py34,py35: nosetests -v --with-coverage --cover-erase --cover-package=zarr zarr
+    py27,py34,py35: nosetests -v zarr
     py36: nosetests -v --with-coverage --cover-erase --cover-package=zarr --with-doctest --doctest-options=+NORMALIZE_WHITESPACE,+ELLIPSIS zarr
     py36: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS docs/tutorial.rst docs/spec/v2.rst
     py36: flake8 --max-line-length=100 zarr
-    python setup.py bdist_wheel
-    coverage report -m
+    py36: coverage report -m
 deps =
     -rrequirements_dev.txt
 
