setup py version coverage exclusions

--- a/tox.ini
+++ b/tox.ini
@@ -9,12 +9,15 @@ envlist = py27, py34, py35, py36, docs
 [testenv]
 setenv =
     PYTHONHASHSEED = 42
+    # hooks for coverage exclusions based on Python major version
+    py34,py35,py36: PY_MAJOR_VERSION = py3
+    py27: PY_MAJOR_VERSION = py2
 commands =
-    py27,py34,py35: nosetests -v zarr
+    py27,py34,py35: nosetests -v --with-coverage --cover-erase --cover-package=zarr zarr
     py36: nosetests -v --with-coverage --cover-erase --cover-package=zarr --with-doctest --doctest-options=+NORMALIZE_WHITESPACE,+ELLIPSIS zarr
     py36: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS docs/tutorial.rst docs/spec/v2.rst
     py36: flake8 --max-line-length=100 zarr
-    py36: coverage report -m
+    coverage report -m
 deps =
     -rrequirements_dev.txt
 
