test bsddb on linux only

--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,9 @@ commands =
     py36: flake8 --max-line-length=100 zarr
 deps =
     -rrequirements_dev.txt
+    # linux only
+    bsddb3==6.2.5
+
 
 [testenv:docs]
 basepython = python2.7
