--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -21,6 +21,7 @@ packaging==16.8
 pkginfo==1.4.1
 pluggy==0.5.2
 py==1.4.34
+py-cpuinfo==3.3.0
 pycodestyle==2.3.1
 pyflakes==1.6.0
 pyparsing==2.2.0
