--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -24,6 +24,8 @@ py==1.4.34
 pycodestyle==2.3.1
 pyflakes==1.6.0
 pyparsing==2.2.0
+pytest==3.2.3
+pytest-cov==2.5.1
 requests==2.18.4
 requests-toolbelt==0.8.0
 setuptools-scm==1.15.6
