run with pytest

--- a/tox.ini
+++ b/tox.ini
@@ -14,8 +14,8 @@ setenv =
     py27: PY_MAJOR_VERSION = py2
 commands =
     python -c 'import glob; import shutil; import os; [(shutil.rmtree(d) if os.path.isdir(d) else os.remove(d) if os.path.isfile(d) else None) for d in glob.glob("./example*")]'
-    py27,py34,py35: nosetests -v --with-coverage --cover-erase --cover-package=zarr zarr
-    py36: nosetests -v --with-coverage --cover-erase --cover-package=zarr --with-doctest --doctest-options=+NORMALIZE_WHITESPACE,+ELLIPSIS zarr
+    py27,py34,py35: pytest -v --cov=zarr zarr
+    py36: pytest -v --cov=zarr --doctest-modules zarr
     coverage report -m
     py36: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS docs/tutorial.rst docs/spec/v2.rst
     py36: flake8 --max-line-length=100 zarr
