--- a/appveyor.yml
+++ b/appveyor.yml
@@ -46,4 +46,5 @@ build: off
 test_script:
   - "%CMD_IN_ENV% python -m pip install -U pip setuptools wheel"
   - "%CMD_IN_ENV% python -m pip install -rrequirements_dev.txt"
+  - "%CMD_IN_ENV% python setup.py bdist_wheel"
   - "%CMD_IN_ENV% python -m pytest -v zarr"
