move optional requirements

--- a/tox.ini
+++ b/tox.ini
@@ -22,8 +22,7 @@ commands =
 deps =
     -rrequirements_dev.txt
     # linux only
-    bsddb3==6.2.5
-    lmdb==0.93
+    -rrequirements_dev_optional.txt
 
 
 [testenv:docs]
