enable LZMA tests under py27

--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ commands =
     py36: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS docs/tutorial.rst docs/spec/v2.rst
     py36: flake8 --max-line-length=100 zarr
 deps =
+    py27: backports.lzma
     -rrequirements_dev.txt
     # linux only
     -rrequirements_dev_optional.txt
