work around numpy 1.14 structured array changes

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, py34, py35, py36, docs
+envlist = py27, py34, py35, py36-npy{113,114}, docs
 
 [testenv]
 setenv =
@@ -14,17 +14,18 @@ setenv =
     py27: PY_MAJOR_VERSION = py2
 commands =
     python -c 'import glob; import shutil; import os; [(shutil.rmtree(d) if os.path.isdir(d) else os.remove(d) if os.path.isfile(d) else None) for d in glob.glob("./example*")]'
-    py27,py34,py35: pytest -v --cov=zarr zarr
-    py36: pytest -v --cov=zarr --doctest-modules zarr
+    py27,py34,py35,py36-npy114: pytest -v --cov=zarr zarr
+    py36-npy113: pytest -v --cov=zarr --doctest-modules zarr
     coverage report -m
-    py36: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS docs/tutorial.rst docs/spec/v2.rst
-    py36: flake8 --max-line-length=100 zarr
+    py36-npy113: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS docs/tutorial.rst docs/spec/v2.rst
+    py36-npy113: flake8 --max-line-length=100 zarr
 deps =
     py27: backports.lzma
+    py27,py34,py35,py36-npy113: numpy==1.13.3
+    py36-npy114: numpy==1.14.0
     -rrequirements_dev.txt
     # linux only
     -rrequirements_dev_optional.txt
-
 
 [testenv:docs]
 basepython = python2.7
