--- a/appveyor.yml
+++ b/appveyor.yml
@@ -63,4 +63,6 @@ test_script:
   - "%CMD_IN_ENV% python -m pip install -U pip setuptools wheel"
   - "%CMD_IN_ENV% python -m pip install numpy==%NUMPY_VERSION%"
   - "%CMD_IN_ENV% python -m pip install -rrequirements_dev.txt"
-  - "%CMD_IN_ENV% python -m pytest -v zarr"
+  - "%CMD_IN_ENV% python setup.py install"
+  - "%CMD_IN_ENV% python -m pytest -v --pyargs zarr"
+  
