collect coverage from py36-npy113 not py36-npy114

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ commands =
     python -c 'import glob; import shutil; import os; [(shutil.rmtree(d) if os.path.isdir(d) else os.remove(d) if os.path.isfile(d) else None) for d in glob.glob("./example*")]'
     py27,py34,py35,py36-npy114: pytest -v --cov=zarr zarr
     py36-npy113: pytest -v --cov=zarr --doctest-modules zarr
-    coverage report -m
+    py27,py34,py35,py36-npy113: coverage report -m
     py36-npy113: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS docs/tutorial.rst docs/spec/v2.rst
     py36-npy113: flake8 --max-line-length=100 zarr
 deps =
