--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,9 @@ setenv =
     py27: PY_MAJOR_VERSION = py2
 commands =
     python -c 'import glob; import shutil; import os; [(shutil.rmtree(d) if os.path.isdir(d) else os.remove(d) if os.path.isfile(d) else None) for d in glob.glob("./example*")]'
-    py27,py34,py35,py36-npy114: pytest -v --cov=zarr zarr
+    py27,py34,py35: pytest -v --cov=zarr zarr
+    # don't run py36-npy114 with coverage because it is run together with py35-npy113 on travis
+    py36-npy114: pytest -v zarr
     py36-npy113: pytest -v --cov=zarr --doctest-modules zarr
     py27,py34,py35,py36-npy113: coverage report -m
     py36-npy113: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS docs/tutorial.rst docs/spec/v2.rst
