--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,12 @@ addons:
 
 python:
   - 2.7
-  - 3.4
   - 3.5
   - 3.6
+  - 3.7
 
 install:
-  - pip install -U pip setuptools wheel
-  - pip install -U tox-travis coveralls
+  - pip install -U pip setuptools wheel tox-travis coveralls
 
 script:
   - tox
