--- a/tox.ini
+++ b/tox.ini
@@ -4,27 +4,35 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, py34, py35, py36-npy{113,114}, docs
+envlist = py27, py35, py36, py37-npy{113,114,115}, docs
 
 [testenv]
+install_command = pip install -v --no-binary=numcodecs {opts} {packages}
 setenv =
     PYTHONHASHSEED = 42
     # hooks for coverage exclusions based on Python major version
-    py34,py35,py36: PY_MAJOR_VERSION = py3
+    py35,py36,py37: PY_MAJOR_VERSION = py3
     py27: PY_MAJOR_VERSION = py2
 commands =
+    # clear out any data files generated during tests
     python -c 'import glob; import shutil; import os; [(shutil.rmtree(d) if os.path.isdir(d) else os.remove(d) if os.path.isfile(d) else None) for d in glob.glob("./example*")]'
-    py27,py34,py35: pytest -v --cov=zarr zarr
-    # don't run py36-npy114 with coverage because it is run together with py35-npy113 on travis
-    py36-npy114: pytest -v zarr
-    py36-npy113: pytest -v --cov=zarr --doctest-modules zarr
-    py27,py34,py35,py36-npy113: coverage report -m
-    py36-npy113: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS docs/tutorial.rst docs/spec/v2.rst
-    py36-npy113: flake8 --max-line-length=100 zarr
+    # main unit test runner
+    # N.B., don't run npy113 or npy114 with coverage because it is run together npy115 on travis
+    py27,py35,py36: pytest -v --cov=zarr --cov-config=.coveragerc zarr
+    py37-npy113: pytest -v zarr
+    py37-npy114: pytest -v zarr
+    py37-npy115: pytest -v --cov=zarr --cov-config=.coveragerc --doctest-modules zarr
+    # generate a coverate report
+    py27,py35,py36,py37-npy115: coverage report -m
+    # run doctests in the tutorial and spec
+    py37-npy115: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS docs/tutorial.rst docs/spec/v2.rst
+    # pep8 checks
+    py37-npy115: flake8 --max-line-length=100 zarr
 deps =
     py27: backports.lzma
-    py27,py34,py35,py36-npy113: numpy==1.13.3
-    py36-npy114: numpy==1.14.0
+    py37-npy113: numpy==1.13.3
+    py37-npy114: numpy==1.14.6
+    py27,py35,py36,py37-npy115: numpy==1.15.2
     -rrequirements_dev.txt
     # linux only
     -rrequirements_dev_optional.txt
