get py37 working on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,14 @@ addons:
     packages:
     - libdb-dev
 
-python:
-  - 2.7
-  - 3.5
-  - 3.6
-  - 3.7
+matrix:
+  include:
+    - python: 2.7
+    - python: 3.5
+    - python: 3.6
+    - python: 3.7
+      dist: xenial
+      sudo: true
 
 install:
   - pip install -U pip setuptools wheel tox-travis coveralls
