--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@
 envlist = py27, py35, py36, py37-npy{113,114,115}, docs
 
 [testenv]
-install_command = pip install -v --no-binary=numcodecs {opts} {packages}
+install_command = pip install --no-binary=numcodecs {opts} {packages}
 setenv =
     PYTHONHASHSEED = 42
     # hooks for coverage exclusions based on Python major version
