test different npy under py36 not py37

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,9 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, py35, py36, py37-npy{113,114,115}, docs
+# N.B., test different versions of numpy under py36 rather than py37
+# because wheels for npy113 not available for py37
+envlist = py27, py35, py36-npy{113,114,115}, py37, docs
 
 [testenv]
 install_command = pip install --no-binary=numcodecs {opts} {packages}
@@ -18,21 +20,21 @@ commands =
     python -c 'import glob; import shutil; import os; [(shutil.rmtree(d) if os.path.isdir(d) else os.remove(d) if os.path.isfile(d) else None) for d in glob.glob("./example*")]'
     # main unit test runner
     # N.B., don't run npy113 or npy114 with coverage because it is run together npy115 on travis
-    py27,py35,py36: pytest -v --cov=zarr --cov-config=.coveragerc zarr
-    py37-npy113: pytest -v zarr
-    py37-npy114: pytest -v zarr
-    py37-npy115: pytest -v --cov=zarr --cov-config=.coveragerc --doctest-modules zarr
+    py27,py35,py36-npy115: pytest -v --cov=zarr --cov-config=.coveragerc zarr
+    py36-npy113: pytest -v zarr
+    py36-npy114: pytest -v zarr
+    py37: pytest -v --cov=zarr --cov-config=.coveragerc --doctest-modules zarr
     # generate a coverate report
-    py27,py35,py36,py37-npy115: coverage report -m
+    py27,py35,py36-npy115,py37: coverage report -m
     # run doctests in the tutorial and spec
-    py37-npy115: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS docs/tutorial.rst docs/spec/v2.rst
+    py37: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS docs/tutorial.rst docs/spec/v2.rst
     # pep8 checks
-    py37-npy115: flake8 --max-line-length=100 zarr
+    py37: flake8 --max-line-length=100 zarr
 deps =
     py27: backports.lzma
-    py37-npy113: numpy==1.13.3
-    py37-npy114: numpy==1.14.6
-    py27,py35,py36,py37-npy115: numpy==1.15.2
+    py36-npy113: numpy==1.13.3
+    py36-npy114: numpy==1.14.6
+    py27,py35,py36-npy115,py37: numpy==1.15.2
     -rrequirements_dev.txt
     # linux only
     -rrequirements_dev_optional.txt
