--- a/tox.ini
+++ b/tox.ini
@@ -30,12 +30,15 @@ commands =
     py37: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS docs/tutorial.rst docs/spec/v2.rst
     # pep8 checks
     py37: flake8 --max-line-length=100 zarr
+    # print environment for debugging
+    pip freeze
 deps =
     py27: backports.lzma
     py36-npy113: numpy==1.13.3
     py36-npy114: numpy==1.14.6
-    py27,py35,py36-npy115,py37: numpy==1.15.2
+    py27,py35,py36-npy115,py37: -rrequirements_dev_npy.txt
     -rrequirements_dev.txt
+    -rrequirements_test.txt
     # linux only
     -rrequirements_dev_optional.txt
 
