--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,6 +26,7 @@ environment:
       PYTHON_VERSION: "3.7"
 
 install:
+  - "docker run -d -p 10000:10000 -p 10001:10001 -p 10002:10002 microsoft/azure-storage-emulator"
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
   - "%CMD_IN_ENV% python -m pip install -U pip setuptools wheel"
   - "%CMD_IN_ENV% python -m pip install -rrequirements_test.txt"
