--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,7 @@ environment:
     # /E:ON and /V:ON options are not enabled in the batch script intepreter
     # See: http://stackoverflow.com/a/13751649/163740
     CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\build.cmd"
+    EMULATOR_LOC: C:\\Program Files (x86)\\Microsoft SDKs\\Azure\\Storage Emulator\\AzureStorageEmulator.exe
 
   matrix:
 
@@ -39,10 +40,10 @@ install:
 build: off
 
 before_test:
-  - cmd: "C:\\Program Files (x86)\\Microsoft SDKs\\Azure\\Storage Emulator\\AzureStorageEmulator.exe" start
+  - '"%EMULATOR_LOC%" start'
 
 test_script:
   - "%CMD_IN_ENV% python -m pytest -v --pyargs zarr"
 
 after_test:
-  - cmd: "C:\\Program Files (x86)\\Microsoft SDKs\\Azure\\Storage Emulator\\AzureStorageEmulator.exe" stop
+  - '"%EMULATOR_LOC%" stop'
