--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,10 @@ addons:
     packages:
     - libdb-dev
 
+services:
+  - redis-server
+  - mongodb
+
 matrix:
   include:
     - python: 2.7
@@ -19,6 +23,9 @@ matrix:
     - python: 3.7
       dist: xenial
       sudo: true
+
+before_script:
+    - mongo mydb_test --eval 'db.createUser({user:"travis",pwd:"test",roles:["readWrite"]});'
 
 install:
   - pip install -U pip setuptools wheel tox-travis coveralls
