Mutable mapping for Azure Blob (#345)
* basic implementation working

* docs and cleanup

* fixed client_kwargs bug

* Add ABSStore mutable mapping

* Fix import syntax

* Get open_zarr() working

* Change account variable names

* Fix client.exists() logging issue

* Minor comment changes

* Get to_zarr() working

* Remove state['container'] delete

* Implement rmdir

* Add docstring for ABSStore

* Remove GCSStore from this branch

* Fixed missing argument in getsize of ABStore

Was missing self.container_name as an argument

* Specified prefix argument in rmdir for abstore

* Fixed join string error in dir_path in ABStore

Join only accepts one argument, using os.path.join(x,y) formats the string as a valid file path for us.

* Remove logging work-around as the issue was fixed in azure-storage 1.3.0

* Clean up docstring

* Remove more GCSStore code

* Move utility functions into ABSStore class

* implemented the rest of the mutable mapping functions. tests pass with python 3.5

* using local blob emulator for storage.ABSStore testing

* fixed PY2 array.array error in storage.ABSStore

* create test container if not exists in ABSStore test

* added more tests for ABSStore

* reverted blob client creation to inside of ABSStore

* added group test for ABSStore

* emulator connection string not needed

* fixed import statement location and put azure-storage-blob in requirements

* fixed pickle tests

* fixed listdir in ABSStore

* fixed getsize

* Fixed PY2 pickle test. python 2 pickle can't pickle instance methods

* implemented the suggestion from here: https://github.com/zarr-developers/zarr/pull/293#discussion_r214753603

* flake-8 fixes

* added azure-storage-blob

* first attempt at docker build with azurite

* azure storage emulator in appveyor

* syntax correction

* checking if emulator is preinstalled

* syntax fix

* syntax fix

* syntax fix

* removed wrong syntax

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,10 @@ branches:
   only:
     - master
 
+# the VS C++ compiler path, doesn't seem to exist in the PATH environment variable of
+# the Visual Studio 2017 build VM, due to which the pyosreplace package fails to build
+image: Visual Studio 2015
+
 environment:
 
   global:
@@ -9,6 +13,7 @@ environment:
     # /E:ON and /V:ON options are not enabled in the batch script intepreter
     # See: http://stackoverflow.com/a/13751649/163740
     CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\build.cmd"
+    EMULATOR_LOC: C:\\Program Files (x86)\\Microsoft SDKs\\Azure\\Storage Emulator\\AzureStorageEmulator.exe
 
   matrix:
 
@@ -36,5 +41,11 @@ install:
 
 build: off
 
+before_test:
+  - '"%EMULATOR_LOC%" start'
+
 test_script:
   - "%CMD_IN_ENV% python -m pytest -v --pyargs zarr"
+
+after_test:
+  - '"%EMULATOR_LOC%" stop'
