--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ addons:
     - libdb-dev
 
 services:
+  - docker
   - redis-server
   - mongodb
 
@@ -24,6 +25,10 @@ matrix:
       dist: xenial
       sudo: true
 
+before_install:
+  - docker pull arafato/azurite
+  - mkdir ~/blob_emulator
+  - docker run -e executable=blob -d -t -p 10000:10000 -v ~/blob_emulator:/opt/azurite/folder arafato/azurite
 before_script:
     - mongo mydb_test --eval 'db.createUser({user:"travis",pwd:"test",roles:["readWrite"]});'
 
