--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@
 [tox]
 # N.B., test different versions of numpy under py36 rather than py37
 # because wheels for npy113 not available for py37
-envlist = py27, py35, py36-npy{113,114,115}, py37, docs
+envlist = py27, py35, py36-npy{113,114,115,116,latest}, py37, docs
 
 [testenv]
 install_command = pip install --no-binary=numcodecs {opts} {packages}
@@ -19,13 +19,12 @@ commands =
     # clear out any data files generated during tests
     python -c 'import glob; import shutil; import os; [(shutil.rmtree(d) if os.path.isdir(d) else os.remove(d) if os.path.isfile(d) else None) for d in glob.glob("./example*")]'
     # main unit test runner
-    # N.B., don't run npy113 or npy114 with coverage because it is run together npy115 on travis
-    py27,py35,py36-npy115: pytest -v --cov=zarr --cov-config=.coveragerc zarr
-    py36-npy113: pytest -v zarr
-    py36-npy114: pytest -v zarr
+    py27,py35,py36-npylatest: pytest -v --cov=zarr --cov-config=.coveragerc zarr
+    py36-{npy113,npy114,npy115,npy116}: pytest -v zarr
+    # run doctests under py37
     py37: pytest -v --cov=zarr --cov-config=.coveragerc --doctest-modules zarr
-    # generate a coverate report
-    py27,py35,py36-npy115,py37: coverage report -m
+    # generate a coverage report
+    py27,py35,py36-npylatest,py37: coverage report -m
     # run doctests in the tutorial and spec
     py37: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS docs/tutorial.rst docs/spec/v2.rst
     # pep8 checks
@@ -36,14 +35,16 @@ deps =
     py27: backports.lzma
     py36-npy113: numpy==1.13.3
     py36-npy114: numpy==1.14.6
-    py27,py35,py36-npy115,py37: -rrequirements_dev_npy.txt
+    py36-npy115: numpy==1.15.4
+    py36-npy116: numpy==1.16.4
+    py27,py35,py36-npylatest,py37: -rrequirements_dev_npy.txt
     -rrequirements_test.txt
     -rrequirements_dev.txt
     # linux only
     -rrequirements_dev_optional.txt
 
 [testenv:docs]
-basepython = python2.7
+basepython = python3.6
 changedir = docs
 deps =
     -rrequirements_rtfd.txt
