no npy117 for py27

--- a/tox.ini
+++ b/tox.ini
@@ -36,8 +36,8 @@ deps =
     py36-npy113: numpy==1.13.3
     py36-npy114: numpy==1.14.6
     py36-npy115: numpy==1.15.4
-    py36-npy116: numpy==1.16.4
-    py27,py35,py36-npylatest,py37: -rrequirements_dev_npy.txt
+    py27,py36-npy116: numpy==1.16.4
+    py35,py36-npylatest,py37: -rrequirements_dev_npy.txt
     -rrequirements_test.txt
     -rrequirements_dev.txt
 
