tidy up tox [ci skip]

--- a/tox.ini
+++ b/tox.ini
@@ -20,8 +20,9 @@ commands =
     python -c 'import glob; import shutil; import os; [(shutil.rmtree(d) if os.path.isdir(d) else os.remove(d) if os.path.isfile(d) else None) for d in glob.glob("./example*")]'
     # main unit test runner
     py27,py35,py36-npylatest: pytest -v --cov=zarr --cov-config=.coveragerc zarr
-    py36-{npy113,npy114,npy115,npy116}: pytest -v zarr
-    # run doctests under py37
+    # don't collect coverage when running older numpy versions
+    py36-{npy115,npy116}: pytest -v zarr
+    # collect coverage and run doctests under py37
     py37: pytest -v --cov=zarr --cov-config=.coveragerc --doctest-modules zarr
     # generate a coverage report
     py27,py35,py36-npylatest,py37: coverage report -m
