--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-# N.B., test different versions of numpy under py36 rather than py37
-# because wheels for npy113 not available for py37
-envlist = py27, py35, py36-npy{115,116,latest}, py37, docs
+envlist = py27, py35, py36, py37-npy{115,116,latest}, docs
 
 [testenv]
 install_command = pip install --no-binary=numcodecs {opts} {packages}
@@ -19,26 +17,27 @@ commands =
     # clear out any data files generated during tests
     python -c 'import glob; import shutil; import os; [(shutil.rmtree(d) if os.path.isdir(d) else os.remove(d) if os.path.isfile(d) else None) for d in glob.glob("./example*")]'
     # main unit test runner
-    py27,py35,py36-npylatest: pytest -v --cov=zarr --cov-config=.coveragerc zarr
+    py27,py35,py36: pytest -v --cov=zarr --cov-config=.coveragerc zarr
     # don't collect coverage when running older numpy versions
-    py36-{npy115,npy116}: pytest -v zarr
+    py37-{npy115,npy116}: pytest -v zarr
     # collect coverage and run doctests under py37
-    py37: pytest -v --cov=zarr --cov-config=.coveragerc --doctest-modules zarr
+    py37-npylatest: pytest -v --cov=zarr --cov-config=.coveragerc --doctest-modules zarr
     # generate a coverage report
-    py27,py35,py36-npylatest,py37: coverage report -m
+    py27,py35,py36,py37-npylatest: coverage report -m
     # run doctests in the tutorial and spec
-    py37: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS docs/tutorial.rst docs/spec/v2.rst
+    py37-npylatest: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS docs/tutorial.rst docs/spec/v2.rst
     # pep8 checks
-    py37: flake8 zarr
+    py37-npylatest: flake8 zarr
     # print environment for debugging
     pip freeze
 deps =
     py27: backports.lzma
-    py36-npy115: numpy==1.15.4
-    py36-npy116: numpy==1.16.4
-    py27,py35,py36-npylatest,py37: -rrequirements_dev_npy.txt
-    -rrequirements_test.txt
-    -rrequirements_dev.txt
+    py37-npy115: numpy==1.15.4
+    py27,py37-npy116: numpy==1.16.4
+    py35,py36,py37-npylatest: -rrequirements_dev_numpy.txt
+    -rrequirements_dev_minimal.txt
+    -rrequirements_dev_optional.txt
+    -rrequirements_dev_service.txt
 
 [testenv:docs]
 basepython = python3.6
