--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ commands =
     # don't collect coverage when running older numpy versions
     py37-{npy115,npy116}: pytest -v zarr
     # collect coverage and run doctests under py37
-    py37-npylatest: pytest -v --cov=zarr --cov-config=.coveragerc --doctest-modules zarr
+    py37-npylatest: pytest -v --cov=zarr --cov-config=.coveragerc --doctest-plus zarr
     # generate a coverage report
     py27,py35,py36,py37-npylatest: coverage report -m
     # run doctests in the tutorial and spec
