--- a/requirements_dev_minimal.txt
+++ b/requirements_dev_minimal.txt
@@ -5,4 +5,5 @@ numcodecs==0.6.3
 msgpack-python==0.5.6
 setuptools-scm==3.3.3
 # test requirements
-pytest==5.0.1
+pytest==5.0.1; python_version > '3.0'
+pytest==4.6.5; python_version < '3.0'
