deal with packages not on py27

--- a/tox.ini
+++ b/tox.ini
@@ -33,8 +33,8 @@ commands =
 deps =
     py27: backports.lzma
     py37-npy115: numpy==1.15.4
-    py27,py37-npy116: numpy==1.16.4
-    py35,py36,py37-npylatest: -rrequirements_dev_numpy.txt
+    py37-npy116: numpy==1.16.4
+    py27,py35,py36,py37-npylatest: -rrequirements_dev_numpy.txt
     -rrequirements_dev_minimal.txt
     -rrequirements_dev_optional.txt
     -rrequirements_dev_service.txt
