--- a/requirements_dev_optional.txt
+++ b/requirements_dev_optional.txt
@@ -10,4 +10,4 @@ pytest-cov==2.7.1
 pytest-doctestplus==0.3.0
 pytest-remotedata==0.3.2
 h5py==2.9.0
-s3fs==0.3.3
+s3fs==0.3.3; python_version > '3.0'
