rework running of service tests using environment variables

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,11 @@ addons:
     packages:
     - libdb-dev
 
+env:
+  - ZARR_TEST_ABS=1
+  - ZARR_TEST_MONGO=1
+  - ZARR_TEST_REDIS=1
+
 services:
   - docker
   - redis-server
