--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,10 @@ setenv =
     # hooks for coverage exclusions based on Python major version
     py35,py36,py37: PY_MAJOR_VERSION = py3
     py27: PY_MAJOR_VERSION = py2
+passenv =
+    ZARR_TEST_ABS
+    ZARR_TEST_MONGO
+    ZARR_TEST_REDIS
 commands =
     # clear out any data files generated during tests
     python -c 'import glob; import shutil; import os; [(shutil.rmtree(d) if os.path.isdir(d) else os.remove(d) if os.path.isfile(d) else None) for d in glob.glob("./example*")]'
@@ -37,7 +41,6 @@ deps =
     py27,py35,py36,py37-npylatest: -rrequirements_dev_numpy.txt
     -rrequirements_dev_minimal.txt
     -rrequirements_dev_optional.txt
-    -rrequirements_dev_service.txt
 
 [testenv:docs]
 basepython = python3.6
