--- a/requirements_dev_optional.txt
+++ b/requirements_dev_optional.txt
@@ -1,6 +1,10 @@
 # optional library requirements
 bsddb3==6.2.6; sys_platform != 'win32'
 lmdb==0.97; sys_platform != 'win32'
+# optional library requirements for services
+azure-storage-blob==2.0.1
+redis==3.3.6
+pymongo==3.8.0
 # optional test requirements
 tox==3.13.2
 coverage==4.5.4
