--- a/.pyup.yml
+++ b/.pyup.yml
@@ -4,21 +4,15 @@
 schedule: every month
 
 requirements:
-  - requirements.txt:
-      pin: False
-      update: False
-  - requirements_test.txt:
-      pin: False
-      update: False
-  - requirements_rtfd.txt:
-      pin: False
-      update: False
-  - requirements_dev.txt:
+  - requirements_dev_minimal.txt:
       pin: True
       update: all
-  - requirements_dev_npy.txt:
+  - requirements_dev_numpy.txt:
       pin: True
       update: all
   - requirements_dev_optional.txt:
       pin: True
       update: all
+  - requirements_rtfd.txt:
+      pin: False
+      update: False
