--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,12 @@ addons:
     packages:
     - libdb-dev
 
+env:
+  global:
+    - ZARR_TEST_ABS=1
+    - ZARR_TEST_MONGO=1
+    - ZARR_TEST_REDIS=1
+
 services:
   - docker
   - redis-server
