--- a/requirements_dev_optional.txt
+++ b/requirements_dev_optional.txt
@@ -1,5 +1,17 @@
-# These packages are currently not available on Windows.
-bsddb3==6.2.6
-lmdb==0.94
-redis==3.0.1
-pymongo==3.7.1
+# optional library requirements
+bsddb3==6.2.6; sys_platform != 'win32'
+lmdb==0.97; sys_platform != 'win32'
+# optional library requirements for services
+azure-storage-blob==2.0.1
+redis==3.3.6
+pymongo==3.8.0
+# optional test requirements
+tox==3.13.2
+coverage==4.5.4
+coveralls==1.8.2
+flake8==3.7.8
+pytest-cov==2.7.1
+pytest-doctestplus==0.3.0
+pytest-remotedata==0.3.2
+h5py==2.9.0
+s3fs==0.3.3; python_version > '3.0'
