--- a/requirements_dev_minimal.txt
+++ b/requirements_dev_minimal.txt
@@ -6,4 +6,5 @@ msgpack-python==0.5.6
 setuptools-scm==3.3.3
 # test requirements
 pytest==5.0.1; python_version > '3.0'
+# don't let pyup change this, needed until we drop support for py27
 pytest==4.6.5; python_version < '3.0'
