--- a/requirements_dev_numpy.txt
+++ b/requirements_dev_numpy.txt
@@ -3,4 +3,4 @@
 # numpy version.
 numpy==1.17.0; python_version > '3.0'
 # don't let pyup change this, needed until we drop support for py27
-numpy==1.16.4; python_version < '3.0'
+numpy==1.16.4; python_version < '3.0' # pyup: ignore
