--- a/requirements_dev_optional.txt
+++ b/requirements_dev_optional.txt
@@ -4,7 +4,7 @@ lmdb==0.97; sys_platform != 'win32'
 # optional library requirements for services
 # don't let pyup change pinning for azure-storage-blob, need to pin to older
 # version to get compatibility with azure storage emulator on appveyor
-azure-storage-blob==2.0.1
+azure-storage-blob==2.0.1 # pyup: ignore
 redis==3.3.6
 pymongo==3.8.0
 # optional test requirements
