--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, py35, py36, py37-npy{115,116,latest}, docs
+envlist = py35, py36, py37-npy{115,116,latest}, docs
 
 [testenv]
 install_command = pip install --no-binary=numcodecs {opts} {packages}
@@ -12,7 +12,6 @@ setenv =
     PYTHONHASHSEED = 42
     # hooks for coverage exclusions based on Python major version
     py35,py36,py37: PY_MAJOR_VERSION = py3
-    py27: PY_MAJOR_VERSION = py2
 passenv =
     ZARR_TEST_ABS
     ZARR_TEST_MONGO
@@ -21,13 +20,13 @@ commands =
     # clear out any data files generated during tests
     python -c 'import glob; import shutil; import os; [(shutil.rmtree(d) if os.path.isdir(d) else os.remove(d) if os.path.isfile(d) else None) for d in glob.glob("./example*")]'
     # main unit test runner
-    py27,py35,py36: pytest -v --cov=zarr --cov-config=.coveragerc zarr
+    py35,py36: pytest -v --cov=zarr --cov-config=.coveragerc zarr
     # don't collect coverage when running older numpy versions
     py37-{npy115,npy116}: pytest -v zarr
     # collect coverage and run doctests under py37
     py37-npylatest: pytest -v --cov=zarr --cov-config=.coveragerc --doctest-plus zarr --remote-data
     # generate a coverage report
-    py27,py35,py36,py37-npylatest: coverage report -m
+    py35,py36,py37-npylatest: coverage report -m
     # run doctests in the tutorial and spec
     py37-npylatest: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS docs/tutorial.rst docs/spec/v2.rst
     # pep8 checks
@@ -35,10 +34,9 @@ commands =
     # print environment for debugging
     pip freeze
 deps =
-    py27: backports.lzma
     py37-npy115: numpy==1.15.4
     py37-npy116: numpy==1.16.4
-    py27,py35,py36,py37-npylatest: -rrequirements_dev_numpy.txt
+    py35,py36,py37-npylatest: -rrequirements_dev_numpy.txt
     -rrequirements_dev_minimal.txt
     -rrequirements_dev_optional.txt
 
