--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ matrix:
   include:
     - python: 3.5
     - python: 3.6
+      env: BUILD_DOCS='true'
     - python: 3.7
       dist: xenial
       sudo: true
@@ -42,6 +43,7 @@ install:
 
 script:
   - tox
+  - if [[ $BUILD_DOCS == 'true' ]]; then tox -e docs; fi
 
 after_success:
   - coveralls
