Try to limit Deprecationwarnigs to zarr

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,5 +2,5 @@
 doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS IGNORE_EXCEPTION_DETAIL
 addopts = --durations=10
 filterwarnings =
-    error::DeprecationWarning
+    error::DeprecationWarning:zarr.*
 
