--- a/pytest.ini
+++ b/pytest.ini
@@ -3,4 +3,4 @@ doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS IGNORE_EXCEPTION_DETAIL
 addopts = --durations=10
 filterwarnings =
     error::DeprecationWarning:zarr.*
-
+    ignore:PY_SSIZE_T_CLEAN will be required.*:DeprecationWarning
