--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py35, py36, py37-npy{115,116,latest}, py38, docs
+envlist = py36, py37-npy{115,116,latest}, py38, docs
 
 [testenv]
 install_command = pip install --no-binary=numcodecs {opts} {packages}
