figuring out tests

--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,7 @@ commands =
     py35,py36,py37-npylatest,py38: coverage report -m
     # run doctests in the tutorial and spec
     py38: python -m doctest -o NORMALIZE_WHITESPACE -o ELLIPSIS docs/tutorial.rst docs/spec/v2.rst
+    py38_test: pytest {posargs}
     # pep8 checks
     py38: flake8 zarr
     # print environment for debugging
