Try to re-enable Redis
set a redis service and reenable the tests.

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -18,6 +18,16 @@ jobs:
         python-version: ['3.6.9' , 3.7, 3.8]
         numpy_version: ['==1.16.4', '']
     services:
+      redis:
+        image: redis
+        # Set health checks to wait until redis has started
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 6379:6379
       mongodb:
         image: mongo:3.4.23
         ports:
@@ -44,7 +54,7 @@ jobs:
         conda activate zarr-env
         python -m pip install --upgrade pip
         python -m pip install -U pip setuptools wheel codecov
-        python -m pip install -rrequirements_dev_minimal.txt numpy${{ matrix.numpy_version}} -rrequirements_dev_optional.txt pymongo
+        python -m pip install -rrequirements_dev_minimal.txt numpy${{ matrix.numpy_version}} -rrequirements_dev_optional.txt pymongo redis
         python -m pip install -e . 
         python -m pip freeze
     - name: Tests
@@ -53,7 +63,7 @@ jobs:
         COVERAGE_FILE: .coverage.${{matrix.python-version}}.${{matrix.numpy_version}}
         ZARR_TEST_ABS: 0
         ZARR_TEST_MONGO: 1
-        ZARR_TEST_REDIS: 0
+        ZARR_TEST_REDIS: 1
       run: |
         conda activate zarr-env
         pytest --cov=zarr --cov-config=.coveragerc --doctest-plus --cov-report xml --cov=./ 
